Track E3-E6: cleanup items from explore report
A single combined cleanup commit for the 4 small bounded items
found in the codebase exploration.

E3: `git rm` the leftover backup file
`EventSourcedNetPositionProvider.java-e` (133 lines, editor
backup of the class deleted in P3.6 commit 12d1b95). Also added
`*.java-e` and `*.java~` to .gitignore to prevent future
backups from being committed.

E4: `ReadModelStore` indentation bug (see report for file:line).

E5: `FullComposition` `extract*` helpers that never extract —
either implemented the extraction or deleted the dead helpers
based on what's appropriate.

E6: Removed unused imports + dead `extractStrategyName` method
from `PortfolioEngine` + removed unused import from
`MatchingEngine`.

Verified clean: :trading-execution:test (148), :trading-strategy:test
(120), :trading-simulation:test (56), :composition:test (14) — all green.